changed logging handler

--- a/config/logging.conf
+++ b/config/logging.conf
@@ -13,8 +13,8 @@ handlers = app,console
 propagate = 1
 
 [handler_app]
-class = handlers.TimedRotatingFileHandler
-args = ['logs/log.txt', 'MIDNIGHT']
+class = handlers.RotatingFileHandler
+args = ['logs/log.txt', 'a', 104857600, 5]
 formatter = default
 
 [handler_console]
