--- a/config/settings.json
+++ b/config/settings.json
@@ -56,6 +56,9 @@
         }
     },
     "5ch": {
-        "address": "http://fate.5ch.net/cryptocoin"
+        "address": {
+            "list": "http://fate.5ch.net/cryptocoin/subback.html",
+            "thread": "http://fate.5ch.net/test/read.cgi/cryptocoin/{thread_id}"
+        }
     }
 }
