refactoring and readme

--- a/config/settings.json
+++ b/config/settings.json
@@ -9,7 +9,8 @@
             "korean": "results/korean",
             "japanese": "results/japanese",
             "chinese": "results/chinese"
-        }
+        },
+        "database": "crawler.db"
     },
     "steemit": {
         "address": {
